# ayb

./: .env  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  PGWIRE_POC.md  README.md  db-auth-plan.md  required-domains.md  spec.md  sqlx-data.json  test-issues.md
.github/: dependabot.yml
.github/workflows/: publish-on-tag.yml  rust.yml  tests-optimized.yml  tests.yml
client-js/: README.md  ayb-oauth.js  ayb.d.ts  ayb.js  ayb.mjs  package.json  strip-dts-noise.js
docs/config/endpoints/: example.json  schema.json
migrations/: 2022100901_initial.sql
migrations/postgres/: 2022100901_initial.sql  2023072001_email_authentication.sql  20230720_email_authentication.sql  2023092401_api_token.sql  20231223165738_user_profiles.sql  2024012101_db_snapshot.sql  2024083101_permission.sql  2024122701_scoped_tokens.sql  2025122601_scoped_tokens.sql  2025122602_remove_token_status.sql
migrations/sqlite/: 2022100901_initial.sql  2023072001_email_authentication.sql  20230720_email_authentication.sql  2023092401_api_token.sql  20231223165738_user_profiles.sql  2024012101_db_snapshot.sql  2024122701_scoped_tokens.sql  2025011801_oauth_authorization.sql  2025122601_scoped_tokens.sql  2025122602_remove_token_status.sql
plans/: db-auth-plan.md
scripts/: build_nsjail.sh  wait_for_ci.py
src/: ayb_db.rs  build_nsjail.sh  client.rs  databases.rs  email.rs  error.rs  formatting.rs  hosted_db.rs  http.rs  lib.rs  macros.rs  main.rs  models.rs  server.rs  templating.rs  web_info.rs
src/ayb_db/: crud.rs  db_interfaces.rs  models.rs
src/client/: admin.rs  cli.rs  config.rs  http.rs
src/databases/: sqlite.rs
src/email/: backend.rs  mod.rs  templating.rs
src/hosted_db/: daemon_registry.rs  duckdb.rs  engine.rs  isolation.rs  paths.rs  sandbox.rs  sandbox_capabilities.rs  sqlite.rs
src/hosted_db_runner/: Cargo.toml  build_wasi.sh
src/hosted_db_runner/src/: lib.rs  main.rs
src/http/: client.rs  config.rs  endpoints.rs  permissions.rs  server.rs  structs.rs  tokens.rs  url_verification.rs  utils.rs  verification.rs
src/http/endpoints/: confirm.rs  create_database.rs  entity_details.rs  log_in.rs  mod.rs  query.rs  query_entity.rs  register.rs  update_profile.rs
src/http/endpoints/testing/: mod.rs
src/server/: cli.rs  config.rs  database_name_validation.rs  permissions.rs  pgwire_server.rs  query_execution.rs  reserved-usernames.txt  server_runner.rs  snapshots.rs  tokens.rs  url_verification.rs  username_validation.rs  utils.rs  web_frontend.rs
src/server/api_endpoints/: confirm.rs  create_database.rs  database_details.rs  entity_details.rs  export.rs  health.rs  list_database_permissions.rs  list_shares.rs  list_snapshots.rs  list_tokens.rs  log_in.rs  mod.rs  oauth_token.rs  query.rs  register.rs  restore_snapshot.rs  revoke_token.rs  share.rs  share_list.rs  update_database.rs  update_profile.rs
src/server/endpoints/: confirm.rs  create_database.rs  display_user.rs  entity_database_permission.rs  entity_details.rs  list_snapshots.rs  mod.rs  query.rs  register.rs  restore_snapshot.rs  share.rs  update_database.rs  update_profile.rs
src/server/snapshots/: execution.rs  hashes.rs  models.rs  storage.rs
src/server/ui/: confirm.rs  display_user.rs  login.rs  mod.rs  register.rs  templates.rs  web_details.rs
src/server/ui_endpoints/: auth.rs  client.rs  confirm.rs  create_database.rs  database.rs  entity_details.rs  export.rs  log_in.rs  log_out.rs  mod.rs  oauth.rs  query.rs  register.rs  sharing.rs  snapshots.rs  templates.rs  tokens.rs
src/server/ui_endpoints/templates/: base.html  base_auth.html  base_content.html  confirm_error.html  confirm_success.html  create_database_fields.html  database.html  database_permissions.html  database_snapshots.html  entity_details.html  entity_tokens.html  error_snippet.html  log_in.html  log_in_check_email.html  log_in_error.html  oauth_authorize.html  oauth_error.html  profile_fragment.html  query_results.html  register.html  register_check_email.html  register_error.html  share_list.html  share_list_partial.html  success_snippet.html
src/stacks_db/: crud.rs  models.rs
tests/: browser_e2e.rs  claude_code_setup.sh  cli.rs  e2e.rs  email_helpers.rs  http.rs  localstack_server.sh  nsjail  quick_win_setup.sh  reset_db.sh  reset_db_browser_sqlite.sh  reset_db_postgres.sh  reset_db_sqlite.sh  run_localstack.sh  run_minio.sh  set_up_e2e_env.sh  smtp_server.py  smtp_server.sh  test-server-config-browser-sqlite.toml  test-server-config-postgres.toml  test-server-config-sqlite.toml  test-server-config.toml
tests/browser_e2e_tests/: #user_profile.rs#  create_and_query_database.rs  entity_profile.rs  mod.rs  oauth_flow.rs  permissions.rs  registration_tests.rs  snapshots.rs  token_management.rs
tests/e2e_tests/: anonymous_access_tests.rs  create_and_query_db_tests.rs  entity_details_and_profile_tests.rs  export_import_tests.rs  health_check_tests.rs  mod.rs  oauth_tests.rs  permissions_tests.rs  pgwire_tests.rs  registration_tests.rs  snapshot_tests.rs  system_snapshot_tests.rs  token_management_tests.rs  token_tests.rs
tests/utils/: ayb.rs  browser.rs  mod.rs  testing.rs
