[package]
name = "ayb"
version = "0.1.9"
edition = "2021"
description = "ayb makes it easy to create, host, and share embedded databases like SQLite and DuckDB"
homepage = "https://github.com/marcua/ayb"
documentation = "https://github.com/marcua/ayb#readme"
license = "Apache-2.0"
default-run = "ayb"

[dependencies]
actix-cors = { version = "0.7.0" }
actix-web = { version = "4.9.0" }
actix-web-httpauth = { version = "0.8.2" }
async-trait = { version = "0.1.85" }
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.43.0" }
aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
aws-types = { version = "1.3.0" }
blake3 = { version = "1.5.5" }
chrono = { version = "0.4.39", features = [ "serde" ] }
clap = { version = "4.5.26", features = ["cargo", "derive", "env"] }
derive_more = { version = "1.0.0", features = ["error"] }
directories = { version = "6.0" }
dyn-clone = { version = "1.0.17" }
env_logger = { version = "0.10.2" }
fernet = { version = "0.2.2" }
go-parse-duration = { version = "0.1.1" }
lettre = { version = "0.11.11", features = ["tokio1-native-tls"] }
quoted_printable = { version = "0.5.1" }
regex = { version = "1.11.1"}
reqwest = { version = "0.12.4", features = ["json"] }
rusqlite = { version = "0.27.0", features = ["bundled", "limits"] }
rustyline = { version = "15.0.0" }
rust-s3 = { version = "0.35.1" }
scraper = { version = "0.22.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["raw_value"] }
serde_repr = { version = "0.1.19" }
sqlx = { version = "0.6.3", features = ["chrono", "postgres", "runtime-actix-native-tls", "sqlite"] }
time = { version = "0.3.37" }  # Consider removing once another dependency updates time (https://github.com/time-rs/time/issues/681)
toml = { version = "0.8.19" }
tokio = { version = "1.43.0", features = ["macros", "process", "rt"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"]}
prefixed-api-key = { version = "0.3.0", features = ["sha2"]}
prettytable-rs = { version = "0.10.0"}
url = { version = "2.5.2", features = ["serde"] }
urlencoding = { version = "2.1.3" }
uuid = { version = "1.11.0", features = ["v7"] }
zstd = { version = "0.13.2" }

[dev-dependencies]
assert_cmd = "2.0"
assert-json-diff = "2.0.2"
predicates = "3.1.3"

[[bin]]
name = "ayb"
path = "src/bin/ayb.rs"

[[bin]]
name = "ayb_isolated_runner"
path = "src/bin/ayb_isolated_runner.rs"

[profile.dev]
# debug = 2 takes ~50% longer to build for tests on marcua's tiny dev
# server. Comment this out if you need more debugging information.
# See https://github.com/marcua/ayb/issues/342.
debug = 1
