[package]
name = "ayb-hosted-db-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled", "limits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.108" }
